# basic

./: CMakeLists.txt  CMakePresets.json  Makefile  common.h  config.c  incident.c  incident.h  log.c  log_20250630_140709.txt  log_20250630_141230.txt  log_20250630_141454.txt  log_20250630_141540.txt  log_20250630_141908.txt  log_20250630_142212.txt  log_20250705_143750.txt  log_20250705_151213.txt  log_20250706_204259.txt  main.c  map.c  simulation.c  unit.c  unit.h  utils.c
